--- a/shareaza/packages.config
+++ b/shareaza/packages.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="7-Zip.StandaloneConsole.x64" version="22.1.0" targetFramework="native" />
   <package id="boost" version="1.80.0" targetFramework="native" />
@@ -45,4 +45,5 @@
   <package id="boost_wserialization-vc143" version="1.80.0" targetFramework="native" />
   <package id="boost_zlib-vc143" version="1.80.0" targetFramework="native" />
   <package id="boost-vc143" version="1.80.0" targetFramework="native" />
+  <package id="openssl-vc140-static-32_64" version="1.1.1.1" targetFramework="native" />
 </packages>
