--- a/shareaza/Shareaza.rc
+++ b/shareaza/Shareaza.rc
@@ -269,8 +269,8 @@ ID_NETWORK_DC           ICON                    "Res\\Network_DC.ico"
 //
 
 VS_VERSION_INFO VERSIONINFO
- FILEVERSION 2,7,10,4
- PRODUCTVERSION 2,7,10,4
+ FILEVERSION 2,7,10,5
+ PRODUCTVERSION 2,7,10,5
  FILEFLAGSMASK 0x1fL
 #ifdef _DEBUG
  FILEFLAGS 0x1L
@@ -288,12 +288,12 @@ BEGIN
             VALUE "Comments", "Shareaza Ultimate File Sharing"
             VALUE "CompanyName", "Shareaza Development Team"
             VALUE "FileDescription", "Shareaza Ultimate File Sharing"
-            VALUE "FileVersion", "2.7.10.4"
+            VALUE "FileVersion", "2.7.10.5"
             VALUE "InternalName", "Shareaza"
             VALUE "LegalCopyright", "Copyright © Shareaza Development Team, 2002-2017. All rights reserved."
             VALUE "OriginalFilename", "Shareaza.exe"
             VALUE "ProductName", "Shareaza"
-            VALUE "ProductVersion", "2.7.10.4"
+            VALUE "ProductVersion", "2.7.10.5"
         END
     END
     BLOCK "VarFileInfo"
@@ -620,10 +620,11 @@ CAPTION "About Shareaza"
 FONT 8, "MS Shell Dlg", 0, 0, 0x1
 BEGIN
     LTEXT           "Shareaza File Sharing Client ",IDC_TITLE,7,15,279,10,SS_CENTERIMAGE
-    LTEXT           "Copyright © Shareaza Development Team, 2002-",IDC_COPYRIGHT,7,30,279,12
+    LTEXT           "Copyright © Shareaza Development Team, 2002-",IDC_COPYRIGHT,7,25,279,12
+    LTEXT           "Copyright © Salvatore Ansani, 2022-2023",IDC_COPYRIGHT, 7, 33, 279, 12
     LTEXT           "Shareaza is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free Software Foundation; either version 2 of the License, or (at your option) any later version.",IDC_STATIC,7,45,279,24
     LTEXT           "Logo by Kid at pakkeimak.com",IDC_STATIC,7,75,279,12
-    LTEXT           "http://shareaza.sourceforge.net/",IDC_WEB,7,112,279,10
+    LTEXT           "http://github.com/ansani/shareaza",IDC_WEB,7,112,279,10
     DEFPUSHBUTTON   "OK",IDOK,226,138,60,16
     LTEXT           "This product includes GeoLite data created by MaxMind, available from http://maxmind.com/",IDC_STATIC,7,90,279,18
 END
