Upgraded Boost and 7z NuGet packages

--- a/shareaza/Shareaza_143.vcxproj.filters
+++ b/shareaza/Shareaza_143.vcxproj.filters
@@ -2769,4 +2769,8 @@
       <Filter>Resource Files</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <Xml Include="Res\ShareazaFileListStyle.xsl" />
+    <Xml Include="Res\DCFileListStyle.xsl" />
+  </ItemGroup>
 </Project>
