Change build ID

--- a/.github/workflows/virustotal.yaml
+++ b/.github/workflows/virustotal.yaml
@@ -12,7 +12,7 @@ jobs:
     - name: Download All Artifacts
       uses: actions/download-artifact@v4
       with:
-        run-id: 98
+        run-id: 8897459540
         path: .
         merge-multiple: true
 
