--- a/.github/workflows/virustotal.yaml
+++ b/.github/workflows/virustotal.yaml
@@ -14,6 +14,7 @@ jobs:
       with:
         run-id: 8897459540
         path: .
+        github-token: ${{ secrets.GH_PAT }} # token with actions:read permissions on target repo
         merge-multiple: true
 
   virustotal:
