--- a/.github/workflows/virustotal.yaml
+++ b/.github/workflows/virustotal.yaml
@@ -20,6 +20,7 @@ jobs:
       run: ls -R .
 
   virustotal:
+    needs: download
     runs-on: ubuntu-latest
     steps:
       - name: Display structure of downloaded files
