--- a/.github/workflows/virustotal.yaml
+++ b/.github/workflows/virustotal.yaml
@@ -21,6 +21,6 @@ jobs:
     - name: VirusTotal Scan
       uses: crazy-max/ghaction-virustotal@v4
       with:
-        vt_api_key: ${{ secrets.VT_API_KEY }}
+        vt_api_key: ${{ secrets.VIRUS_TOTAL_API_KEY }}
         files: |
           *.exe
