--- a/.github/workflows/virustotal.yaml
+++ b/.github/workflows/virustotal.yaml
@@ -18,6 +18,13 @@ jobs:
         merge-multiple: true
     - name: Display structure of downloaded files
       run: ls -R .
+    - name: Release
+      uses: softprops/action-gh-release@v2
+      with:
+        draft: true
+        generate_release_notes: true
+        files: |
+          *.exe
     - name: VirusTotal Scan
       uses: crazy-max/ghaction-virustotal@v4
       with:
