--- a/.github/workflows/virustotal.yaml
+++ b/.github/workflows/virustotal.yaml
@@ -29,5 +29,6 @@ jobs:
       uses: crazy-max/ghaction-virustotal@v4
       with:
         vt_api_key: ${{ secrets.VIRUS_TOTAL_API_KEY }}
+        update_release_body: true
         files: |
           *.exe
