--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -79,6 +79,7 @@ jobs:
         - name: Release
           uses: softprops/action-gh-release@v2
           with:
+            token: ${{ secrets.RELEASE_PAT }}
             draft: true
             generate_release_notes: true
             files: |
